# wingspan-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: agent.py  main.py  manager.py
src/agents/: bird_facts.py  bird_image_recognition.py  wingspan.py
src/connectors/: bot_telegram.py  telegram-background.py
src/eval/: test_eval.py
src/eval/data/: evalset-initial.test.json
src/tools/: get_bird.py  image_artifacts.py  wingspan.csv
